objects/BMCServiceDesk__BMC_CDROMDrive__c.object
<CustomObject>
    <description>BMC_CDROMDrive. CMDB Class that stores information about the capabilities and management of CD-ROM drives. A CD-ROM drive is a device that reads information from a CD-ROM. This class corresponds to the DMTF CIM_CDROMDrive class.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Max_Component_Length__c</fullName>
        <label>Maximum Component Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Transfer_Rate__c</fullName>
        <label>Transfer Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CD ROM Drive</label>
    <nameField>
        <label>CD ROM Drive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD ROM Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>